--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
+    "firebase": "^11.3.1",
+    "next": "15.1.7",
+    "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
